force-app/main/default/objects/Document_Reason_Message__mdt.object
<CustomObject>
    <description>Mapping of Enrollment Document Reason__c to the message to display in Document Upload</description>
    <fields>
        <fullName>Document_Type__c</fullName>
        <description>This corresponds to the Enrollment Document Type</description>
        <inlineHelpText>This corresponds to the Enrollment Document Type</inlineHelpText>
        <label>Document Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Enrollment_Document_Reason__c</fullName>
        <description>The picklist value of the Enrollment Document Reason__c to display the message for</description>
        <inlineHelpText>The picklist value of the Enrollment Document Reason__c to display the message for</inlineHelpText>
        <label>Enrollment Document Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>The message to display for a given Enrollment Document Reason__c</description>
        <inlineHelpText>The message to display for a given Enrollment Document Reason__c</inlineHelpText>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Document Reason Message</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Message__c</columns>
        <columns>Document_Type__c</columns>
        <columns>Enrollment_Document_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Allforonereason</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Message__c</columns>
        <columns>Document_Type__c</columns>
        <columns>Enrollment_Document_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Document_Type__c</field>
            <operation>equals</operation>
            <value>Proof of Residence</value>
        </filters>
        <label>All for one reason</label>
    </listViews>
    <pluralLabel>Document Reason Messages</pluralLabel>
</CustomObject>