force-app/main/default/objects/Document_Reason_Message__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Message__c</columns>
    <columns>Document_Type__c</columns>
    <columns>Enrollment_Document_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>