force-app/main/default/objects/Document_Reason_Message__mdt/listViews/Allforonereason.listView-meta.xml
<ListView>
    <fullName>Allforonereason</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Message__c</columns>
    <columns>Document_Type__c</columns>
    <columns>Enrollment_Document_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Document_Type__c</field>
        <operation>equals</operation>
        <value>Proof of Residence</value>
    </filters>
    <label>All for one reason</label>
</ListView>